tests/res/classes/error_assign_instance_method.say
class B {
    me = "B";
    fn getMe() { return this.me; }
}

class A {
    me = "A";
    fn getMe() { return this.me; }
}

say objA = A();
say objB = B();
objA.getMe = objB.getMe; // error: Cannot assign to method 'getMe'